--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,6 +8,7 @@ ___________________________________________________________
    They contain additional link and script tags for the html output
    By default stylesheets are added to end of head and javascripts to end of body
 -> Added page separation to cache info site since there could be many files now (hajo)
+-> Added {ajax:navbookmark} placeholder for templates and function cs_url_self for url sharing (hajo)
 
 -- Fixed a few bugs that were reported at "Trac" --
 
