--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -4,12 +4,15 @@ CHANGELOG
 ClanSphere 2010.0 >> 2010-08-XX
 ___________________________________________________________
 
+-> Added email login feature (fr33z3m4n)
 -> Added new optional template placeholders func:stylesheet and func:javascript (hajo)
    They contain additional link and script tags for the html output
    By default stylesheets are added to end of head and javascripts to end of body
 -> Added page separation to cache info site since there could be many files now (hajo)
 -> Added cs_url_self function for url sharing with two example template placeholders (hajo)
    {ajax:navaddthis} for addthis.com and {ajax:navbookmark} for simple bookmarking and url checks
+-> Added support for data memcache storage using apc or xcache php extension
+    Can be enabled inside main files like index.php by adding e.g. $cs_main['cache_mode'] = 'apc';
 -> Reworked mod count (astmaih)
 -> Reworked mod servers (fr33z3m4n)
 -> Updated CKEditor to 3.4.0 (hajo)
