--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,7 +1,7 @@
 CHANGELOG
 --------------------------
 
-ClanSphere 2010.0 >> 2010-08-XX
+ClanSphere 2010.0 >> 2010-08-27
 ___________________________________________________________
 
 -> Added email login feature (fr33z3m4n)
