reworked svn after release

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,6 +1,11 @@
 CHANGELOG
 --------------------------
 
+ClanSphere 2010.0.X >> 2010-XX-XX
+___________________________________________________________
+
+
+
 ClanSphere 2010.0 >> 2010-08-27
 ___________________________________________________________
 
