--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,6 +1,13 @@
 CHANGELOG
 --------------------------
 
+
+ClanSphere 2010.2 >> 2010-XX-XX
+___________________________________________________________
+
+
+
+
 ClanSphere 2010.1 >> 2010-11-15
 ___________________________________________________________
 
