--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,10 +2,16 @@ CHANGELOG
 --------------------------
 
 
-ClanSphere 2010.2 >> 2010-XX-XX
+ClanSphere 2010.2 >> 2010-12-XX
 ___________________________________________________________
 
+-> Changed mods/.htaccess content to be deactivated by default as it caused problems (hajo)
+-> Fixed PHP 4 error page introduced with last release to output its results (hajo)
+-> Fixed caching mode 'none' to work as expected (hajo)
+-> Fixed update check to work again (hajo)
 -> Updated jQuery to 1.4.4 (hajo)
+
+-- Fixed a few bugs that were reported at "Trac" --
 
 
 ClanSphere 2010.1 >> 2010-11-15
