--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,6 +1,11 @@
 CHANGELOG
 --------------------------
 
+ClanSphere 2010.2.1 >> 2011-XX-XX
+___________________________________________________________
+
+-> Fixed escaping in static pages with rte_html turned on, e.g. ckeditor (hajo)
+
 
 ClanSphere 2010.2 >> 2010-12-03
 ___________________________________________________________
