--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -4,7 +4,11 @@ CHANGELOG
 ClanSphere 2010.2.1 >> 2011-XX-XX
 ___________________________________________________________
 
+-> Fixed abcode create to work again and to remember input (hajo)
 -> Fixed escaping in static pages with rte_html turned on, e.g. ckeditor (hajo)
+-> Fixed xss possibility in url abcode tag (schiri)
+
+-- Fixed a few bugs that were reported at "Trac" --
 
 
 ClanSphere 2010.2 >> 2010-12-03
