--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,6 +11,7 @@ ___________________________________________________________
 -> Added database subtype support to switch between MySQL storage engines (hajo)
 -> Fixed abcode create to work again and to remember input (hajo)
 -> Fixed escaping in static pages with rte_html turned on, e.g. ckeditor (hajo)
+-> Updated CKEditor to 3.4.3 (hajo)
 
 -- Fixed a few bugs that were reported at "Trac" --
 
