--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,7 +1,7 @@
 CHANGELOG
 --------------------------
 
-ClanSphere 2010.3 >> 2011-01-XX
+ClanSphere 2010.3 >> 2011-01-24
 ___________________________________________________________
 
 -- Recommended PHP version changed to 5.3.5
