--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,6 +1,11 @@
 CHANGELOG
 --------------------------
 
+ClanSphere 2010.3.1 >> 2011-05-XX
+___________________________________________________________
+
+
+
 ClanSphere 2010.3 >> 2011-01-24
 ___________________________________________________________
 
