reworked svn after release

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,6 +2,12 @@ CHANGELOG
 --------------------------
 
 
+ClanSphere 2011.0.1 >> 2011-XX-XX
+___________________________________________________________
+
+
+
+
 ClanSphere 2011.0 >> 2011-03-28
 ___________________________________________________________
 
