--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -5,8 +5,8 @@ CHANGELOG
 ClanSphere 2011.0.1 >> 2011-XX-XX
 ___________________________________________________________
 
-
 -> Fixed login to work on other ports than the default one (astmaih)
+-> Updated jQuery to 1.6.0 (hajo)
 
 -- Fixed a few bugs that were reported at "Trac" --
 
