updated bundled ckeditor to 3.5.3

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -6,6 +6,7 @@ ClanSphere 2011.0.1 >> 2011-XX-XX
 ___________________________________________________________
 
 -> Fixed login to work on other ports than the default one (astmaih)
+-> Updated CKEditor to 3.5.3 (hajo)
 -> Updated jQuery to 1.6.0 (hajo)
 
 -- Fixed a few bugs that were reported at "Trac" --
