updated changelog and externals

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,8 +8,9 @@ ___________________________________________________________
 -> Added zlib flag for cs_main array to turn compression on and off (hajo)
 -> Fixed login to work on other ports than the default one (astmaih)
 -> Improved placeholder detections in template engine (hajo)
--> Updated CKEditor to 3.5.4 (hajo)
+-> Updated CKEditor to 3.6.0 (hajo)
 -> Updated jQuery to 1.6.0 (hajo)
+-> Removed cups mod (hajo)
 
 -- Fixed a few bugs that were reported at "Trac" --
 
