updated changelog file

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -5,8 +5,11 @@ CHANGELOG
 ClanSphere 2011.0.1 >> 2011-XX-XX
 ___________________________________________________________
 
+>> Security: Fixed a bunch of xss possibilities (hajo)
+
 -> Added zlib flag for cs_main array to turn compression on and off (hajo)
 -> Fixed login to work on other ports than the default one (astmaih)
+-> New abcode function [email] is an alias for [mail] (hajo)
 -> Improved placeholder detections in template engine (hajo)
 -> Updated CKEditor to 3.6.0 (hajo)
 -> Updated jQuery to 1.6.0 (hajo)
