--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,7 +2,7 @@ CHANGELOG
 --------------------------
 
 
-ClanSphere 2011.0.1 >> 2011-XX-XX
+ClanSphere 2011.1 >> 2011-05-21
 ___________________________________________________________
 
 >> Security: Fixed a bunch of xss possibilities (hajo)
@@ -11,8 +11,8 @@ ___________________________________________________________
 -> Fixed login to work on other ports than the default one (astmaih)
 -> New abcode function [email] is an alias for [mail] (hajo)
 -> Improved placeholder detections in template engine (hajo)
--> Updated CKEditor to 3.6.0 (hajo)
--> Updated jQuery to 1.6.0 (hajo)
+-> Updated CKEditor to 3.6.0 and implemented basic bbcode support (hajo)
+-> Updated jQuery to 1.6.1 (hajo)
 -> Removed cups mod (hajo)
 
 -- Fixed a few bugs that were reported at "Trac" --
