reworked svn after release

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,6 +2,12 @@ CHANGELOG
 --------------------------
 
 
+ClanSphere 2011.1.1 >> 2011-XX-XX
+___________________________________________________________
+
+-! Don't touch, dragons in here !-
+
+
 ClanSphere 2011.1 >> 2011-05-21
 ___________________________________________________________
 
