--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -10,7 +10,7 @@ ___________________________________________________________
 -> Moved jQuery and corresponding javascript files to new mod jquery (hajo)
 -> Renamed CKEditor config file to avoid conflicts with default one on updates (hajo)
 -> Updated CKEditor to 3.6.1 (hajo)
--> Updated jQuery to 1.6.X (hajo)
+-> Updated jQuery to 1.6.2 (hajo)
 
 !! Future third party software changes and updates (e.g. to CKEditor and jQuery)
 !! will be available in the official module database to not affect the release cycle.
