--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,19 +1,26 @@
 CHANGELOG
 --------------------------
 
-
-ClanSphere 2011.2 DEV >> 2011-07-0X
+Development and Support Notice
 ___________________________________________________________
 
+Future updates and extensions will be available in the module db.
+This will only happen if it is necessary or created by the community.
+There will be no further release except for security related issues.
+Upcoming PHP and MySQL branches don't seem to cause problems.
+Support for ClanSphere will still remain in our forums and contact forms.
+
+
+ClanSphere 2011.2 >> 2011-07-06
+___________________________________________________________
+
+-> Added more information for servers without live stats turned on (patch by markezzz)
 -> Added multiple choice option to board vote functionality (patch by lava)
 -> Email of new registered users is now hidden by default (hajo)
 -> Moved jQuery and corresponding javascript files to new mod jquery (hajo)
 -> Renamed CKEditor config file to avoid conflicts with default one on updates (hajo)
 -> Updated CKEditor to 3.6.1 (hajo)
 -> Updated jQuery to 1.6.2 (hajo)
-
-!! Future third party software changes and updates (e.g. to CKEditor and jQuery)
-!! will be available in the official module database to not affect the release cycle.
 
 -- Fixed a few bugs that were reported at "Trac" --
 
