updated ckeditor to 3.6.3

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -7,7 +7,8 @@ ___________________________________________________________
 -> Changed notifymods to contain a hint for files and board mod functionality (hajo)
 -> Fixed news images not working in view action (hajo)
 -> Fixed pagination in medals list not working (reported by astmaih)
--> Updated jQuery to 1.7.2 (hajo)
+-> Updated CKEditor to 3.6.3
+-> Updated jQuery to 1.7.2
 
 
 ClanSphere 2011.3 Patch 1 >> 2012-03-31
