--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,6 +9,7 @@ ___________________________________________________________
 -> Fixed news images not working in view action (hajo)
 -> Fixed pagination in medals list not working (reported by astmaih)
 -> Fixed rss title and description not escaped (hajo)
+-> Improved charset detection by sending a header (hajo)
 -> Updated CKEditor to 3.6.3
 -> Updated jQuery to 1.7.2
 
