--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,6 +8,7 @@ ___________________________________________________________
 -> Fixed emails being malformed in some cases (fr33z3m4n, hajo)
 -> Fixed news images not working in view action (hajo)
 -> Fixed pagination in medals list not working (reported by astmaih)
+-> Fixed redirect messages not working with pdo database drivers (hajo)
 -> Fixed rss title and description not escaped (hajo)
 -> Improved charset detection by sending a header (hajo)
 -> Updated CKEditor to 3.6.3
