Multiple Login Sessions
Allows users to save their logins accross computers. This is a quick
untested port from my live site. Needs testing.

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,6 +12,7 @@ ___________________________________________________________
 -> Improved charset detection by sending a header (hajo)
 -> Updated CKEditor to 3.6.3
 -> Updated jQuery to 1.7.2
+-> Multiple user sessions support (Tazzernator)
 
 
 ClanSphere 2011.3 Patch 1 >> 2012-03-31
