--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,6 +1,12 @@
 CHANGELOG
 --------------------------
 
+ClanSphere 2011.3 Patch 3 >> 2012-XX-XX
+___________________________________________________________
+
+-> Updated CKEditor to 3.6.4
+
+
 ClanSphere 2011.3 Patch 2 >> 2012-06-16
 ___________________________________________________________
 
