Fixed icq profile links and removed status images as they don't work anymore

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -5,6 +5,7 @@ ClanSphere 2011.3 Patch 3 >> 2012-XX-XX
 ___________________________________________________________
 
 -> Fixed head messages not shown in board listcat (reported by rapid)
+-> Fixed icq profile links and removed status images as they don't work anymore (hajo)
 -> Updated CKEditor to 3.6.4
 
 
