Fixed board pages translation occuring twice

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,6 +8,7 @@ ___________________________________________________________
 -- Line and file endings are now unified in the GIT source code repository
 
 -> Added captcha requirement option for users to guestbook mod (hajo)
+-> Fixed board pages translation occuring twice in users home (reported by rapid)
 -> Fixed gallery images not shown with most current PHP GD extension (fr33z3m4n)
 -> Fixed head messages not shown in board listcat (reported by rapid)
 -> Fixed icq profile links and removed status images as they don't work anymore (hajo)
