--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,14 +1,19 @@
 CHANGELOG
 --------------------------
 
-ClanSphere 2011.3 Patch 3 >> 2012-09-XX
+ClanSphere 2011.3 Patch 3 >> 2013-01-17
 ___________________________________________________________
 
--- Recommended PHP version changed to 5.4.7
+>> Security: Fixed language path traversal in core functions (jam2)
+
+-- Recommended PHP version changed to 5.4.10
 -- Line and file endings are now unified in the GIT source code repository
 
 -> Added captcha requirement option for users to guestbook mod (hajo)
+-> Added delete all comments by userid option to comments mod (hajo)
+-> Fixed banner rotation not working with mod rewrite (palle)
 -> Fixed board pages translation occuring twice in users home (reported by rapid)
+-> Fixed developer themebar path errors for some environments (hajo)
 -> Fixed gallery images not shown with most current PHP GD extension (fr33z3m4n)
 -> Fixed head messages not shown in board listcat (reported by rapid)
 -> Fixed icq profile links and removed status images as they don't work anymore (hajo)
