--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,6 +1,12 @@
 CHANGELOG
 --------------------------
 
+ClanSphere 2011.3 Patch 4 >> 2013-XX-XX
+___________________________________________________________
+
+-> Updated CKEditor to 3.6.6
+
+
 ClanSphere 2011.3 Patch 3 >> 2013-01-17
 ___________________________________________________________
 
