changed version and update check urls

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -4,6 +4,9 @@ CHANGELOG
 ClanSphere 2011.3 Patch 4 >> 2013-XX-XX
 ___________________________________________________________
 
+-- Version and Update Check URLs have changed with this release
+-- Earlier releases might not get notified about future changes
+
 -> Updated CKEditor to 3.6.6
 -> Updated CKEditor filebrowser to FCKEditor 2.6.9
 -> Updated jQuery to 1.8.3
