--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,6 +8,7 @@ ___________________________________________________________
 -- Earlier releases might not get notified about future changes
 
 -> Changed version check download target to show update packages (hajo)
+-> Fixed ckeditor image filebrowser for admins in bbcode mode (hajo)
 -> Fixed files download page errors for non existing entries (hajo)
 -> Fixed files listcat showing an empty list of subcategories (hajo)
 -> Removed old cvs and svn version information from php files (hajo)
