update to fckeditor filebrowser abcode changes

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,9 +9,9 @@ ___________________________________________________________
 
 -> Added PHP GD Extension version to software overview (hajo)
 -> Added rewrite support (Pretty URLs) for Lighttpd and Nginx (hajo)
--> Changed FCKEditor filebrowser to exclude basepath in local urls (hajo)
+-> Changed FCKEditor filebrowser to exclude basepath for abcode usage (hajo)
 -> Changed version check download target to show update packages (hajo)
--> Fixed CKEditor image filebrowser for admins in bbcode mode (hajo)
+-> Fixed CKEditor image filebrowser for admins in abcode mode (hajo)
 -> Fixed files download page errors for non existing entries (hajo)
 -> Fixed files listcat showing an empty list of subcategories (hajo)
 -> Removed old cvs and svn version information from php files (hajo)
