--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,7 +1,7 @@
 CHANGELOG
 --------------------------
 
-ClanSphere 2011.3 Patch 4 >> 2013-XX-XX
+ClanSphere 2011.3 Patch 4 >> 2013-01-28
 ___________________________________________________________
 
 -- Version and Update Check URLs have changed with this release
